# SDSParser-py

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: dump_results.py  jsonl_results.py  sds_parser.py
samples/: sds_sample_record
src/: acl.rs  lib.rs
