[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"


[project]
name = "sds_parser"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

authors = [
  {email = "aalfaifi@u0041.co"},
  {name = "AbdulRhman Alfaifi"}
]